Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: aaib_report</h1>
 
-  <p>There are <strong>10868</strong> pages with document type
+  <p>There are <strong>10869</strong> pages with document type
 &lsquo;aaib_report&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -361,8 +361,8 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-boeing-787-9-g-zbkf">AAIB investigation to Boeing 787-9, G-ZBKF    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-schleicher-ash-25-e-g-cfst">AAIB investigation to Schleicher ASH 25 E, G-CFST  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-boeing-787-9-g-zbkf">AAIB investigation to Boeing 787-9, G-ZBKF    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-replica-royal-aircraft-factory-be2c-g-awyi">AAIB investigation to Replica Royal Aircraft Factory BE2c, G-AWYI  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-airbus-helicopters-ec175b-g-emeb">AAIB investigation to Airbus Helicopters EC175B, G-EMEB</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bae-atp-se-mao-18-august-2020">AAIB investigation to BAe ATP, SE-MAO 18 August 2020</a></li>
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-sb-5e-glider-g-dejh">AAIB investigation to SB-5E glider, G-DEJH    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-scheibe-super-falke-sf25e-g-kdey">AAIB investigation to Scheibe Super Falke SF25E, G-KDEY  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bae-atp-se-mao">AAIB investigation to BAe ATP, SE-MAO  </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-alauda-airspeeder-mk-ii-uas-registration-n-slash-a-040719">AAIB investigation to Alauda Airspeeder Mk II, (UAS, registration n/a)  040719</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rans-s6-116-coyote-ii-g-buwk">AAIB investigation to Rans S6-116 Coyote II, G-BUWK</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
