--- a/document-types/closed_consultation.html
+++ b/document-types/closed_consultation.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: closed_consultation</h1>
 
-  <p>There are <strong>947</strong> pages with document type
+  <p>There are <strong>949</strong> pages with document type
 &lsquo;closed_consultation&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/consultations/exchange-of-driving-licences-issued-in-taiwan-the-united-arab-emirates-ukraine-and-the-republic-of-north-macedonia">Exchange of driving licences issued in Taiwan, the United Arab Emirates, Ukraine and the Republic of North Macedonia</a></li>
 <li><a href="https://www.gov.uk/government/consultations/reforming-the-mental-health-act">Reforming the Mental Health Act</a></li>
-<li><a href="https://www.gov.uk/government/consultations/the-future-buildings-standard">The Future Buildings Standard</a></li>
-<li><a href="https://www.gov.uk/government/consultations/green-paper-transforming-public-procurement">Green Paper: Transforming public procurement</a></li>
 <li><a href="https://www.gov.uk/government/consultations/covid-status-certification-review-call-for-evidence">COVID-Status Certification Review - Call for evidence - now closed</a></li>
+<li><a href="https://www.gov.uk/government/consultations/green-paper-transforming-public-procurement">Green Paper: Transforming public procurement</a></li>
+<li><a href="https://www.gov.uk/government/consultations/the-future-buildings-standard">The Future Buildings Standard</a></li>
 <li><a href="https://www.gov.uk/government/consultations/ending-the-sale-of-energy-drinks-to-children">Ending the sale of energy drinks to children</a></li>
 <li><a href="https://www.gov.uk/government/consultations/violence-against-women-and-girls-vawg-call-for-evidence">Violence Against Women and Girls (VAWG) Call for Evidence</a></li>
 <li><a href="https://www.gov.uk/government/consultations/planning-for-the-future">Planning for the future</a></li>
 <li><a href="https://www.gov.uk/government/consultations/judicial-review-reform">Judicial Review Reform</a></li>
-<li><a href="https://www.gov.uk/government/consultations/increasing-the-normal-minimum-pension-age-consultation-on-implementation">Increasing the normal minimum pension age: consultation on implementation</a></li>
+<li><a href="https://www.gov.uk/government/consultations/national-planning-policy-framework-and-national-model-design-code-consultation-proposals">National Planning Policy Framework and National Model Design Code: consultation proposals</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=closed_consultation&amp;count=10">Source query from Search API</a></p>
 
