--- a/document-types/employment_appeal_tribunal_decision.html
+++ b/document-types/employment_appeal_tribunal_decision.html
@@ -364,13 +364,13 @@
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/tesco-stores-ltd-v-s-ukeats-slash-0040-slash-19-slash-ss">Tesco Stores Ltd v S : UKEATS/0040/19/SS</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-michael-daly-v-bmi-healthcare-ltd-ukeats-slash-0009-slash-19-slash-ss-v">Mr Michael Daly v BMI Healthcare Ltd: UKEATS/0009/19/SS (V)</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/moray-hamilton-v-fife-council-ukeats-slash-0006-slash-20-slash-ss-v">Moray Hamilton v Fife Council: UKEATS/0006/20/SS (V)</a></li>
-<li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-b-price-v-powys-county-council-ukeat-slash-0133-slash-20-slash-la-v">Mr B Price v Powys County Council: UKEAT/0133/20/LA (V)</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-daniel-cox-v-adecco-and-others-ukeat-slash-0339-slash-19-slash-at-v">Mr Daniel Cox v Adecco and Others: UKEAT/0339/19/AT (V)</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-p-watson-v-1-hilary-meredith-solicitors-ltd-2-ms-h-meredith-ukeat-slash-0092-slash-20-slash-ba-v">Mr P Watson v 1) Hilary Meredith Solicitors Ltd 2) Ms H Meredith UKEAT/0092/20/BA (V)</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-g-imrie-v-right-track-scotland-ltd-ukeats-slash-0016-slash-20-v-sh">Mr G Imrie v Right Track Scotland Ltd: UKEATS/0016/20 (V) SH</a></li>
+<li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-b-price-v-powys-county-council-ukeat-slash-0133-slash-20-slash-la-v">Mr B Price v Powys County Council: UKEAT/0133/20/LA (V)</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/ms-s-flatman-v-essex-county-council-ukeat-slash-0097-slash-20-slash-ba">Ms S Flatman v Essex County Council: UKEAT/0097/20/BA</a></li>
 <li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/mr-c-sinclair-v-trackwork-ltd-ukeat-slash-0129-slash-20-slash-oo-v">Mr C Sinclair v Trackwork Ltd: UKEAT/0129/20/OO (V) </a></li>
-<li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/bmi-healthcare-ltd-v-mr-m-shoukrey-ukeat-slash-0336-slash-19-slash-da">BMI Healthcare Ltd v Mr M Shoukrey: UKEAT/0336/19/DA</a></li>
+<li><a href="https://www.gov.uk/employment-appeal-tribunal-decisions/the-government-legal-service-v-ms-t-brookes-ukeat-0302-16-rn">The Government Legal Service v Ms T Brookes: UKEAT/0302/16/RN</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=employment_appeal_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
