--- a/document-types/employment_tribunal_decision.html
+++ b/document-types/employment_tribunal_decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: employment_tribunal_decision</h1>
 
-  <p>There are <strong>74809</strong> pages with document type
+  <p>There are <strong>74826</strong> pages with document type
 &lsquo;employment_tribunal_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,12 +365,12 @@
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-mj-taplin-v-freeths-llp-2602284-slash-2018">Mr MJ Taplin v Freeths LLP: 2602284/2018</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-d-rodgers-v-leeds-laser-cutting-ltd-1803829-slash-2020">Mr D Rodgers v Leeds Laser Cutting Ltd: 1803829/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-n-a-ashraf-v-sgl-co-packing-ltd-2406259-2019">Mr N A Ashraf v SGL Co Packing Ltd: 2406259/2019</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-r-taylor-v-jaguar-land-rover-ltd-1304471-2018">Ms R Taylor v Jaguar Land Rover Ltd: 1304471/2018</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-e-moran-v-wm-morrison-supermarkets-plc-1405877-slash-2020">Mr E Moran v WM Morrison Supermarkets plc: 1405877/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mrs-n-dudenko-v-costa-ltd-4102497-slash-2020">Mrs N Dudenko v Costa Ltd: 4102497/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/professor-r-sheikholeslami-v-the-university-of-edinburgh-4102702-2012-and-1-other">Professor R Sheikholeslami v The University of Edinburgh: 4102702/2012 and 4107069/2012</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mrs-h-webster-v-kirkman-ltd-and-bourse-scot-ltd-4114124-slash-2019">Mrs H Webster v Kirkman Ltd and Bourse Scot Ltd: 4114124/2019</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-v-williams-v-creative-support-ltd-2410147-2019">Ms V Williams v Creative Support Ltd: 2410147/2019</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/deimantas-kubilius-v-kent-foods-ltd-3201960-slash-2020">Deimantas Kubilius v Kent Foods Ltd: 3201960/2020</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-s-bortey-v-city-building-engineering-services-ltd-1401229-slash-2020">Mr S Bortey v City Building Engineering Services Ltd: 1401229/2020</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/mrs-m-saafan-v-bt-plc-1300991-slash-2019">Mrs M Saafan v BT plc: 1300991/2019</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=employment_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
