--- a/document-types/international_development_fund.html
+++ b/document-types/international_development_fund.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/international-development-funding/assistive-technology-impact-fund-research-and-innovation">Assistive Technology Impact Fund</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/africa-enterprise-challenge-fund">Africa Enterprise Challenge Fund </a></li>
 <li><a href="https://www.gov.uk/international-development-funding/private-infrastructure-development-group">Private Infrastructure Development Group</a></li>
-<li><a href="https://www.gov.uk/international-development-funding/regional-infrastructure-programme-for-africa">Regional Infrastructure Programme for Africa </a></li>
+<li><a href="https://www.gov.uk/international-development-funding/nihr-global-health-research-units-research-and-innovation">NIHR Global Health Research Units</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=international_development_fund&amp;count=10">Source query from Search API</a></p>
 
