--- a/document-types/manual.html
+++ b/document-types/manual.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/guidance/mot-inspection-manual-for-motorcycles">MOT inspection manual: motorcycles</a></li>
 <li><a href="https://www.gov.uk/guidance/drivers-hours-goods-vehicles">Drivers’ hours and tachographs: goods vehicles</a></li>
 <li><a href="https://www.gov.uk/guidance/basic-payment-scheme-rules-for-2021">Basic Payment Scheme: rules for 2021</a></li>
+<li><a href="https://www.gov.uk/guidance/how-to-apply-online-for-bps-in-2021">How to apply online for BPS in 2021</a></li>
 <li><a href="https://www.gov.uk/guidance/homelessness-code-of-guidance-for-local-authorities">Homelessness code of guidance for local authorities</a></li>
-<li><a href="https://www.gov.uk/guidance/countryside-stewardship-capital-grants-manual-from-9-february-2021">Countryside Stewardship: Capital Grants manual (from 9 February 2021)</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=manual&amp;count=10">Source query from Search API</a></p>
 
