--- a/document-types/news_story.html
+++ b/document-types/news_story.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: news_story</h1>
 
-  <p>There are <strong>42164</strong> pages with document type
+  <p>There are <strong>42168</strong> pages with document type
 &lsquo;news_story&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -367,11 +367,11 @@
 <li><a href="https://www.gov.uk/government/news/india-added-to-red-list-as-cases-of-new-variant-rise">India added to red list as cases of new variant rise</a></li>
 <li><a href="https://www.gov.uk/government/news/charity-commission-confirms-registration-of-lgb-alliance">Charity Commission confirms registration of LGB Alliance</a></li>
 <li><a href="https://www.gov.uk/government/news/proposed-new-timetable-for-state-pension-age-increases">Proposed new timetable for State Pension age increases</a></li>
-<li><a href="https://www.gov.uk/government/news/increase-to-working-tax-credits-what-this-means">Increase to Working Tax Credits - what this means</a></li>
 <li><a href="https://www.gov.uk/government/news/graduate-route-to-open-to-international-students-on-1-july-2021">Graduate route to open to international students on 1 July 2021</a></li>
+<li><a href="https://www.gov.uk/government/news/increase-to-working-tax-credits-what-this-means">Increase to Working Tax Credits - what this means</a></li>
 <li><a href="https://www.gov.uk/government/news/mot-changes-20-may-2018">MOT rule changes: 20 May 2018</a></li>
-<li><a href="https://www.gov.uk/government/news/ambitious-plans-to-boost-uk-fintech-and-financial-services-set-out-by-chancellor">Ambitious plans to boost UK fintech and financial services set out by Chancellor</a></li>
 <li><a href="https://www.gov.uk/government/news/record-size-and-scope-of-carrier-strike-group-deployment-announced">Record size and scope of Carrier Strike Group deployment announced</a></li>
+<li><a href="https://www.gov.uk/government/news/mandatory-covid-19-testing-introduced-to-bolster-border-measures">Mandatory COVID-19 testing introduced to bolster border measures</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_story&amp;count=10">Source query from Search API</a></p>
 
