--- a/document-types/raib_report.html
+++ b/document-types/raib_report.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/raib-reports/safety-digest-01-slash-2020-dereham">Safety digest 01/2020: Dereham</a></li>
 <li><a href="https://www.gov.uk/raib-reports/report-11-2020-track-workers-struck-by-a-train-at-margam">Report 11/2020: Track workers struck by a train at Margam</a></li>
 <li><a href="https://www.gov.uk/raib-reports/report-09-2020-fatal-accident-at-tyseley-depot">Report 09/2020: Fatal accident at Tyseley depot</a></li>
-<li><a href="https://www.gov.uk/raib-reports/report-13-2020-collision-and-derailment-at-neville-hill">Report 13/2020: Collision and derailment at Neville Hill</a></li>
 <li><a href="https://www.gov.uk/raib-reports/safety-digest-08-slash-2020-bognor-regis">Safety digest 08/2020: Bognor Regis</a></li>
+<li><a href="https://www.gov.uk/raib-reports/report-01-2020-serious-operational-irregularity-at-balham">Report 01/2020: Serious operational irregularity at Balham</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=raib_report&amp;count=10">Source query from Search API</a></p>
 
