--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -362,15 +362,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/82-semilong-road-northampton-nn2-6af-cam-slash-34uf-slash-hna-slash-2020-slash-0028">82 Semilong Road, Northampton NN2 6AF: CAM/34UF/HNA/2020/0028</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/38-regency-square-brighton-east-sussex-bn1-2fj-chi-slash-00ml-slash-ldc-slash-2021-slash-0019">38 Regency Square, Brighton, East Sussex, BN1 2FJ: CHI/00ML/LDC/2021/0019</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/normid-court-bunbury-road-northfield-birmingham-west-midlands-b31-2ds-bir-slash-00cn-slash-ldc-slash-2020-slash-0016">Normid Court, Bunbury Road, Northfield, Birmingham, West Midlands, B31 2DS: BIR/00CN/LDC/2020/0016</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/34-the-forge-262-bradford-street-birmingham-b12-0qy-bir-slash-00cn-slash-htc-slash-2021-slash-0001">34 The Forge, 262 Bradford Street, Birmingham, B12 0QY: BIR/00CN/HTC/2021/0001</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/41-mount-gould-road-plymouth-devon-pl4-7pt-chi-slash-00hg-slash-hna-slash-2021-slash-0001">41 Mount Gould Road, Plymouth, Devon PL4 7PT: CHI/00HG/HNA/2021/0001</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/17-23-and-27-hardwick-square-sw18-4ag-lon-slash-00bj-slash-ldc-slash-2020-slash-0235">17, 23 &amp; 27 Hardwick Square, SW18 4AG: LON/00BJ/LDC/2020/0235</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/38-regency-square-brighton-east-sussex-bn1-2fj-chi-slash-00ml-slash-ldc-slash-2021-slash-0019">38 Regency Square, Brighton, East Sussex, BN1 2FJ: CHI/00ML/LDC/2021/0019</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/24-hanover-court-cambridge-cb2-1jh-cam-12ub-lbc-2020-0001">24 Hanover Court Cambridge CB2 1JH: CAM/12UB/LBC/2020/0001</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/197a-lewisham-way-london-se4-1uy-ref-lon-slash-00az-slash-hmf-slash-2020-slash-0112">197A Lewisham Way, London SE4 1UY - Ref; LON/00AZ/HMF/2020/0112</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/43-compton-street-chesterfield-derbyshire-s40-4ta-bir-slash-17ud-slash-hin-slash-2020-slash-0015">43 Compton Street, Chesterfield, Derbyshire, S40 4TA: BIR/17UD/HIN/2020/0015</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/haytop-country-park-alderwasley-park-whatstandwell-derbyshire-de4-5hp-bir-17ub-phw-2019-0001">Haytop Country Park, Alderwasley Park, Whatstandwell, Derbyshire DE4 5HP: BIR/17UB/PHW/2019/0001</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/3-65-warrior-square-st-leonards-on-sea-east-sussex-tn37-6bg-chi-slash-21ud-slash-hmg-slash-2020-slash-0006">3, 65 Warrior Square, St. Leonards-on-Sea, East Sussex TN37 6BG: CHI/21UD/HMG/2020/0006</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/21-36-queens-apartments-roberston-terrace-hastings-east-sussex-tn34-1jn-chi-slash-21ud-slash-ldc-slash-2021-slash-0032">21-36 Queens Apartments, Roberston Terrace, Hastings, East Sussex, TN34 1JN: CHI/21UD/LDC/2021/0032</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/18-20-sloane-gardens-london-sw1w-8dl-lon-00aw-lrm-2020-0002-v-cvp">18-20 Sloane Gardens, London SW1W 8DL: LON/00AW/LRM/2020/0002 V:CVP</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
