--- a/apps/content-publisher.html
+++ b/apps/content-publisher.html
@@ -422,11 +422,11 @@
       <li><a href="https://www.gov.uk/government/news/over-150-million-funding-to-kickstart-self-building-revolution" class="govuk-link">Over £150 million funding to kickstart self building revolution</a></li>
       <li><a href="https://www.gov.uk/government/news/one-dose-of-covid-19-vaccine-can-cut-household-transmission-by-up-to-half" class="govuk-link">One dose of COVID-19 vaccine can cut household transmission by up to half</a></li>
       <li><a href="https://www.gov.uk/government/news/new-standard-tenancy-agreement-to-help-renters-with-well-behaved-pets" class="govuk-link">New standard tenancy agreement to help renters with well behaved pets</a></li>
+      <li><a href="https://www.gov.uk/government/news/limit-on-mourners-at-funerals-to-be-removed" class="govuk-link">Limit on mourners at funerals to be removed</a></li>
       <li><a href="https://www.gov.uk/government/news/confirmed-cases-of-covid-19-variants-identified-in-uk" class="govuk-link">Confirmed cases of COVID-19 variants identified in UK</a></li>
-      <li><a href="https://www.gov.uk/government/news/new-vaccine-advice-for-adults-living-with-adults-who-are-immunosuppressed" class="govuk-link">New vaccine advice for adults living with adults who are immunosuppressed</a></li>
       <li><a href="https://www.gov.uk/government/news/government-reforms-make-it-easier-and-cheaper-for-leaseholders-to-buy-their-homes" class="govuk-link">Government reforms make it easier and cheaper for leaseholders to buy  their homes </a></li>
+      <li><a href="https://www.gov.uk/government/news/new-vaccine-advice-for-adults-living-with-adults-who-are-immunosuppressed" class="govuk-link">New vaccine advice for adults living with adults who are immunosuppressed</a></li>
       <li><a href="https://www.gov.uk/government/news/government-has-changed-the-law-so-most-renters-have-a-6-month-notice-period" class="govuk-link">Government has changed the law so most renters have a 6 month notice period</a></li>
-      <li><a href="https://www.gov.uk/government/news/uk-house-price-index-for-february-2021" class="govuk-link">UK House Price Index for February 2021</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
