--- a/apps/frontend.html
+++ b/apps/frontend.html
@@ -419,11 +419,11 @@
       <li><a href="https://www.gov.uk/check-mot-history" class="govuk-link">Check the MOT history of a vehicle</a></li>
       <li><a href="https://www.gov.uk/vehicle-tax" class="govuk-link">Tax your vehicle</a></li>
       <li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests" class="govuk-link">Order coronavirus (COVID-19) rapid lateral flow tests</a></li>
-      <li><a href="https://www.gov.uk/get-information-about-a-company" class="govuk-link">Get information about a company</a></li>
       <li><a href="https://www.gov.uk/check-vehicle-tax" class="govuk-link">Check if a vehicle is taxed</a></li>
+      <li><a href="https://www.gov.uk/get-information-about-a-company" class="govuk-link">Get information about a company</a></li>
       <li><a href="https://www.gov.uk/view-driving-licence" class="govuk-link">View or share your driving licence information</a></li>
       <li><a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">Fill in your passenger locator form</a></li>
-      <li><a href="https://www.gov.uk/sold-bought-vehicle" class="govuk-link">Tell DVLA you&rsquo;ve sold, transferred or bought a vehicle</a></li>
+      <li><a href="https://www.gov.uk/sign-in-childcare-account" class="govuk-link">Sign in to your childcare account</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme">
     &lt;!&ndash; raw HTML omitted &ndash;&gt;
