--- a/apps/specialist-publisher.html
+++ b/apps/specialist-publisher.html
@@ -426,7 +426,7 @@
       <li><a href="https://www.gov.uk/drug-device-alerts/class-2-medicines-recall-ennogen-pharma-limited-trimethoprim-200mg-tablets-pl-40147-slash-0083-el-21-a-slash-10" class="govuk-link">Class 2 Medicines Recall: Ennogen Pharma Limited, Trimethoprim 200mg Tablets (PL 40147/0083), EL (21)A/10</a></li>
       <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies" class="govuk-link">UK Market Conformity Assessment Bodies</a></li>
       <li><a href="https://www.gov.uk/aaib-reports" class="govuk-link">Air Accidents Investigation Branch reports</a></li>
-      <li><a href="https://www.gov.uk/raib-reports" class="govuk-link">Rail Accident Investigation Branch reports</a></li>
+      <li><a href="https://www.gov.uk/drug-safety-update/polyethylene-glycol-peg-laxatives-and-starch-based-thickeners-potential-interactive-effect-when-mixed-leading-to-an-increased-risk-of-aspiration" class="govuk-link">Polyethylene glycol (PEG) laxatives and starch-based thickeners: potential interactive effect when mixed, leading to an increased risk of aspiration </a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
