--- a/document-types/corporate_report.html
+++ b/document-types/corporate_report.html
@@ -366,12 +366,12 @@
 <li><a href="https://www.gov.uk/government/publications/dvla-strategic-plan-2021-to-2024">DVLA Strategic Plan 2021 to 2024</a></li>
 <li><a href="https://www.gov.uk/government/publications/defence-in-a-competitive-age">Defence in a Competitive Age</a></li>
 <li><a href="https://www.gov.uk/government/publications/raib-annual-report-published-2021">RAIB: Annual Report 2020 (published 2021)</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-act-one-year-report-march-2021">Coronavirus Act one-year report: March 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/hmrc-charter">HMRC Charter</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-act-one-year-report-march-2021">Coronavirus Act one-year report: March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/review-of-the-shortage-occupation-list-2020">Review of the shortage occupation list: 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/your-charter">Your Charter</a></li>
 <li><a href="https://www.gov.uk/government/publications/public-list-of-active-trade-unions-official-list-and-schedule">Official list and schedule of trade unions and their annual returns</a></li>
-<li><a href="https://www.gov.uk/government/publications/review-of-the-shortage-occupation-list-2020">Review of the shortage occupation list: 2020</a></li>
-<li><a href="https://www.gov.uk/government/publications/defence-and-security-industrial-strategy">Defence and Security Industrial Strategy</a></li>
+<li><a href="https://www.gov.uk/government/publications/ofsted-strategy-2017-to-2022">Ofsted strategy: 2017 to 2022</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=corporate_report&amp;count=10">Source query from Search API</a></p>
 
