--- a/document-types/hmrc_manual_section.html
+++ b/document-types/hmrc_manual_section.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/cryptoassets-manual/crypto21000">CRYPTO21000 - Cryptoassets for individuals: Income Tax: contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/capital-gains-manual/cg60201c">CG60201C - Capital Gains Manual: Reliefs: contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/construction-industry-scheme-reform/cisr14330">CISR14330 - The Scheme: construction operations: index of construction operations</a></li>
-<li><a href="https://www.gov.uk/hmrc-internal-manuals/construction-industry-scheme-reform/cisr14090">CISR14090 - The Scheme: construction operations: building service systems</a></li>
+<li><a href="https://www.gov.uk/hmrc-internal-manuals/cryptoassets-manual/crypto10400">CRYPTO10400 - Introduction to cryptoassets: record keeping</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=hmrc_manual_section&amp;count=10">Source query from Search API</a></p>
 
