--- a/document-types/maib_report.html
+++ b/document-types/maib_report.html
@@ -368,9 +368,9 @@
 <li><a href="https://www.gov.uk/maib-reports/engine-failure-and-subsequent-fire-on-ro-ro-cargo-vessel-finlandia-seaways-with-1-person-injured">Engine failure and subsequent fire on ro-ro cargo vessel Finlandia Seaways with 1 person injured</a></li>
 <li><a href="https://www.gov.uk/maib-reports/collision-between-motor-yachts-minx-and-vision-with-loss-of-1-life">Collision between motor yachts Minx and Vision with loss of 1 life</a></li>
 <li><a href="https://www.gov.uk/maib-reports/collision-between-container-vessel-anl-wyong-and-gas-carrier-king-arthur">Collision between container vessel ANL Wyong and gas carrier King Arthur</a></li>
+<li><a href="https://www.gov.uk/maib-reports/collision-between-ro-ro-passenger-ferry-red-falcon-and-moored-yacht-greylag">Collision between ro-ro passenger ferry Red Falcon and moored yacht Greylag</a></li>
 <li><a href="https://www.gov.uk/maib-reports/grounding-of-general-cargo-vessel-priscilla">Grounding of general cargo vessel Priscilla</a></li>
-<li><a href="https://www.gov.uk/maib-reports/collision-between-bulk-carrier-huayang-endeavour-and-oil-tanker-seafrontier">Collision between bulk carrier Huayang Endeavour and oil tanker Seafrontier</a></li>
-<li><a href="https://www.gov.uk/maib-reports/crush-incident-on-general-cargo-vessel-karina-c-with-loss-of-1-life">Crush incident on general cargo vessel Karina C with loss of 1 life</a></li>
+<li><a href="https://www.gov.uk/maib-reports/flooding-and-subsequent-capsize-of-ro-ro-passenger-ferry-herald-of-free-enterprise-off-the-port-of-zeebrugge-belgium-with-loss-of-193-lives">Flooding and capsize of ro-ro passenger ferry Herald of Free Enterprise with loss of 193 lives</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=maib_report&amp;count=10">Source query from Search API</a></p>
 
