--- a/document-types/protected_food_drink_name.html
+++ b/document-types/protected_food_drink_name.html
@@ -365,10 +365,10 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/protected-food-drink-names/cornish-pasty">Cornish Pasty</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/west-country-farmhouse-cheddar-cheese">West Country Farmhouse Cheddar Cheese</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/london-cure-smoked-salmon">London Cure Smoked Salmon</a></li>
-<li><a href="https://www.gov.uk/protected-food-drink-names/stilton-blue-cheese">Stilton Blue Cheese</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/traditional-cumberland-sausage">Traditional Cumberland sausage</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/scotch-beef">Scotch Beef</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/jersey-royal-potatoes">Jersey Royal Potatoes</a></li>
+<li><a href="https://www.gov.uk/protected-food-drink-names/scottish-farmed-salmon">Scottish Farmed Salmon</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=protected_food_drink_name&amp;count=10">Source query from Search API</a></p>
 
