--- a/document-types/publication_scheme.html
+++ b/document-types/publication_scheme.html
@@ -366,10 +366,10 @@
 <li><a href="https://www.gov.uk/government/organisations/ministry-of-defence/about/publication-scheme">Ministry of Defence – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/disclosure-and-barring-service/about/publication-scheme">Disclosure and Barring Service – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/charity-commission/about/publication-scheme">The Charity Commission – Publication scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/cabinet-office/about/publication-scheme">Cabinet Office – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-education/about/publication-scheme">Department for Education – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-work-pensions/about/publication-scheme">Department for Work and Pensions – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/hm-treasury/about/publication-scheme">HM Treasury – Publication scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/student-loans-company/about/publication-scheme">Student Loans Company – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/public-health-england/about/publication-scheme">Public Health England – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-transport/about/publication-scheme">Department for Transport – Publication scheme</a></li>
 </ul>
