--- a/document-types/smart_answer.html
+++ b/document-types/smart_answer.html
@@ -366,11 +366,11 @@
 <li><a href="https://www.gov.uk/business-coronavirus-support-finder">Find coronavirus financial support for your business</a></li>
 <li><a href="https://www.gov.uk/calculate-your-holiday-entitlement">Calculate holiday entitlement</a></li>
 <li><a href="https://www.gov.uk/calculate-your-redundancy-pay">Calculate your statutory redundancy pay</a></li>
-<li><a href="https://www.gov.uk/find-coronavirus-support">Find out what support you can get if you’re affected by coronavirus</a></li>
 <li><a href="https://www.gov.uk/student-finance-calculator">Student finance calculator</a></li>
+<li><a href="https://www.gov.uk/find-coronavirus-support">Find out what support you can get if you’re affected by coronavirus</a></li>
 <li><a href="https://www.gov.uk/pay-leave-for-parents">Check if you can get leave or pay when you have a child</a></li>
 <li><a href="https://www.gov.uk/child-benefit-tax-calculator">Child Benefit tax calculator</a></li>
-<li><a href="https://www.gov.uk/am-i-getting-minimum-wage">National Minimum Wage and Living Wage calculator for workers</a></li>
+<li><a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=smart_answer&amp;count=10">Source query from Search API</a></p>
 
