--- a/document-types/transparency.html
+++ b/document-types/transparency.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: transparency</h1>
 
-  <p>There are <strong>13579</strong> pages with document type
+  <p>There are <strong>13581</strong> pages with document type
 &lsquo;transparency&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -370,8 +370,8 @@
 <li><a href="https://www.gov.uk/government/publications/coronavirus-cases-by-local-authority-epidemiological-data-22-april-2021">Coronavirus cases by local authority: epidemiological data, 22 April 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-cases-by-local-authority-epidemiological-data-28-april-2021">Coronavirus cases by local authority: epidemiological data, 28 April 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/weekly-statistics-for-nhs-test-and-trace-england-15-april-to-21-april-2021">Weekly statistics for NHS Test and Trace (England): 15 April to 21 April 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/reported-coronavirus-covid-19-cases-by-registered-early-years-and-childcare-settings">Reported coronavirus (COVID-19) notifications by registered early years and childcare settings</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-22-april-2021">Coronavirus England briefing, 22 April 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-29-april-2021">Coronavirus England briefing, 29 April 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=transparency&amp;count=10">Source query from Search API</a></p>
 
