--- a/document-types/world_news_story.html
+++ b/document-types/world_news_story.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: world_news_story</h1>
 
-  <p>There are <strong>13295</strong> pages with document type
+  <p>There are <strong>13296</strong> pages with document type
 &lsquo;world_news_story&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,12 +365,12 @@
 <li><a href="https://www.gov.uk/government/news/uk-carrier-strike-group-will-sail-to-india-on-its-maiden-deployment">UK carrier strike group will sail to India on its maiden deployment</a></li>
 <li><a href="https://www.gov.uk/government/news/new-contact-details-for-uk-visa-and-immigration-enquiries">New Contact Details for UK Visa and Immigration Enquiries</a></li>
 <li><a href="https://www.gov.uk/government/news/information-and-events-for-british-citizens-in-spain">Information and events for British citizens in Spain</a></li>
-<li><a href="https://www.gov.uk/government/news/want-to-contact-uk-visas-and-immigration">Want to contact UK Visas and Immigration?</a></li>
 <li><a href="https://www.gov.uk/government/news/uk-statement-on-somalia-election-negotiations">UK statement on Somalia election negotiations</a></li>
+<li><a href="https://www.gov.uk/government/news/want-to-contact-uk-visas-and-immigration">Want to contact UK Visas and Immigration?</a></li>
 <li><a href="https://www.gov.uk/government/news/attestation-forms-for-travel-to-and-within-france">Attestation forms for travel to and within France</a></li>
+<li><a href="https://www.gov.uk/government/news/uk-and-jordan-trade-agreement-comes-into-effect">UK and Jordan Trade Agreement comes into effect</a></li>
 <li><a href="https://www.gov.uk/government/news/uk-denmark-and-netherlands-approve-agreements-with-somaliland-government-on-critical-infrastructure-to-improve-peoples-lives">UK, Denmark and Netherlands approve agreements with Somaliland Government on critical infrastructure to improve people’s lives</a></li>
 <li><a href="https://www.gov.uk/government/news/tier-4-student-visa-checklist">Tier 4 student visa checklist</a></li>
-<li><a href="https://www.gov.uk/government/news/uk-prime-ministers-special-envoy-for-girls-education-visits-uganda">UK Prime Minister’s Special Envoy for Girls’ Education visits Uganda</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=world_news_story&amp;count=10">Source query from Search API</a></p>
 
