--- a/document-types/consultation_outcome.html
+++ b/document-types/consultation_outcome.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: consultation_outcome</h1>
 
-  <p>There are <strong>4553</strong> pages with document type
+  <p>There are <strong>4555</strong> pages with document type
 &lsquo;consultation_outcome&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -368,9 +368,9 @@
 <li><a href="https://www.gov.uk/government/consultations/safe-use-of-automated-lane-keeping-system-on-gb-motorways-call-for-evidence">Safe use of Automated Lane Keeping System on GB motorways: call for evidence</a></li>
 <li><a href="https://www.gov.uk/government/consultations/transforming-children-and-young-peoples-mental-health-provision-a-green-paper">Transforming children and young people’s mental health provision: a green paper</a></li>
 <li><a href="https://www.gov.uk/government/consultations/consultation-on-the-general-qualifications-alternative-awarding-framework">Consultation on the general qualifications alternative awarding framework</a></li>
+<li><a href="https://www.gov.uk/government/consultations/consultation-on-arrangements-for-an-autumn-2021-exam-series">Consultation on arrangements for an autumn 2021 exam series</a></li>
 <li><a href="https://www.gov.uk/government/consultations/driving-test-language-support">Driving test language support</a></li>
 <li><a href="https://www.gov.uk/government/consultations/energy-company-obligation-eco3-2018-to-2022">Energy Company Obligation: ECO3, 2018 to 2022</a></li>
-<li><a href="https://www.gov.uk/government/consultations/call-for-evidence-raising-standards-in-the-tax-advice-market">Call for evidence: raising standards in the tax advice market</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=consultation_outcome&amp;count=10">Source query from Search API</a></p>
 
