Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/document-types/terms_of_reference.html
+++ b/document-types/terms_of_reference.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/organisations/council-for-science-and-technology/about/terms-of-reference">Council for Science and Technology – Terms of reference</a></li>
 <li><a href="https://www.gov.uk/government/organisations/government-legal-department/about/terms-of-reference">Government Legal Department – Terms of reference</a></li>
 <li><a href="https://www.gov.uk/government/organisations/academy-for-social-justice/about/terms-of-reference">Academy for Social Justice – Terms of reference</a></li>
-<li><a href="https://www.gov.uk/government/organisations/committee-on-fuel-poverty/about/terms-of-reference">Committee on Fuel Poverty – Terms of reference</a></li>
+<li><a href="https://www.gov.uk/government/organisations/committee-on-mutagenicity-of-chemicals-in-food-consumer-products-and-the-environment/about/terms-of-reference">Committee on Mutagenicity of Chemicals in Food, Consumer Products and the Environment – Terms of reference</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=terms_of_reference&amp;count=10">Source query from Search API</a></p>
 
