Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/document-types/case_study.html
+++ b/document-types/case_study.html
@@ -361,7 +361,7 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/case-studies/the-department-for-education-dfes-get-help-with-technology-programme">The Department for Education (DfE)&lsquo;s Get Help with Technology programme</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/the-department-for-education-dfes-get-help-with-technology-programme">The Department for Education (DfE)&lsquo;s Get help with technology programme</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/breaking-competition-law-construction-cartel-in-groundworks">Breaking competition law: construction cartel in groundworks</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/landlord-checks-by-rentprofile-help-prevent-rental-fraud">Landlord checks by RentProfile help prevent rental fraud</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/breaking-competition-law-construction-cartel-in-rolled-lead">Breaking competition law: construction cartel in rolled lead</a></li>
